# libTokenAuthz

./: Makefile.am  bootstrap.sh  configure.ac  create_rpm  create_targz  tokenauthz.spec
AuthzXMLreader/: Makefile.am
SealedEnvelope/: Makefile.am  tokenauthz_create
